--- a/sanpham.html
+++ b/sanpham.html
@@ -522,7 +522,7 @@
         <div class="intro-cat"></div>
         <div class="c30"></div>
         <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-aos="fade-down" data-aos-easing="ease-in-out">
                 <div class="item-cat-page item-hvr">
                     <div class="img-hvr pos-re">
                         <a class="imgcatpro" href="/giai-phap-cadcam/"><img src="http://upviet.com.vn/temp/-uploaded-san pham-anh-dai-dien-giai-phap_giai-phap-cad-cam (1)_cr_480x570.jpg" alt="Giải pháp CAD/CAM" width="100%"></a>
@@ -538,7 +538,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-aos="fade-down" data-aos-easing="ease-in-out">
                 <div class="item-cat-page item-hvr">
                     <div class="img-hvr pos-re">
                         <a class="imgcatpro" href="/giai-phap-cae/"><img src="http://upviet.com.vn/temp/-uploaded-san pham-anh-dai-dien-giai-phap_CAE-giai-phap (1)_cr_480x570.jpg" alt="Giải pháp CAE" width="100%"></a>
@@ -554,7 +554,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-aos="fade-down" data-aos-easing="ease-in-out">
                 <div class="item-cat-page item-hvr">
                     <div class="img-hvr pos-re">
                         <a class="imgcatpro" href="/du-lieu-thong-minh/"><img src="http://upviet.com.vn/temp/-uploaded-san pham-anh-dai-dien-giai-phap_ung-dung-iot-vao-san-xuat-thong-minh (1)_cr_480x570.jpg" alt="Dữ liệu thông minh" width="100%"></a>
@@ -570,7 +570,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-aos="fade-down" data-aos-easing="ease-in-out">
                 <div class="item-cat-page item-hvr">
                     <div class="img-hvr pos-re">
                         <a class="imgcatpro" href="/thiet-bi-cong-nghiep/"><img src="http://upviet.com.vn/temp/-uploaded-san pham-anh-dai-dien-giai-phap_may-phay-5-truc (1)_cr_480x570.png" alt="Thiết bị công nghiệp" width="100%"></a>
@@ -586,7 +586,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12" data-aos="fade-down" data-aos-easing="ease-in-out">
                 <div class="item-cat-page item-hvr">
                     <div class="img-hvr pos-re">
                         <a class="imgcatpro" href="/giai-phap-tu-dong-hoa/"><img src="http://upviet.com.vn/temp/-uploaded-Nha may thong minh_nhamaythongminh_cr_480x570.jpg" alt="Giải pháp tự động hóa" width="100%"></a>
