--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="navigation default">
                 <ul>
                     <li>
-                        <a href="">Trang chủ</a>
+                        <a href="index.html">Trang chủ</a>
                     </li>
                     <li>
                         <a href="gioithieu.html">Giới thiệu</a>
@@ -213,7 +213,15 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="">Dịch vụ</a>
+                        <a href="dichvu.html">Dịch vụ</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="chitiet.html">Đào tạo & chuyển giao công nghệ</a>
+                            </li>
+                            <li>
+                                <a href="chitiet.html">Tư vấn & phát triển sản phẩm</a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         <a href="tintuc.html">Tin tức</a>
@@ -230,10 +238,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="">Video</a>
+                        <a href="video.html">Video</a>
                     </li>
                     <li>
-                        <a href="">Liên hệ</a>
+                        <a href="lienhe.html">Liên hệ</a>
                     </li>
                 </ul>
             </div>
@@ -286,27 +294,35 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="">Dịch vụ</a>
-                    </li>
-                    <li>
-                        <a href="">Tin tức</a>
+                        <a href="dichvu.html">Dịch vụ</a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="index.html">Chứng chỉ chất lượng</a>
+                                <a href="chitiet.html">Đào tạo & chuyển giao công nghệ</a>
                             </li>
                             <li>
-                                <a href="index.html">Công nghệ</a>
-                            </li>
-                            <li>
-                                <a href="index.html">Giải thưởng</a>
+                                <a href="chitiet.html">Tư vấn & phát triển sản phẩm</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="">Video</a>
+                        <a href="tintuc.html">Tin tức</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="chitiet.html">Chứng chỉ chất lượng</a>
+                            </li>
+                            <li>
+                                <a href="chitiet.html">Công nghệ</a>
+                            </li>
+                            <li>
+                                <a href="chitiet.html">Giải thưởng</a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        <a href="">Liên hệ</a>
+                        <a href="video.html">Video</a>
+                    </li>
+                    <li>
+                        <a href="lienhe.html">Liên hệ</a>
                     </li>
                 </ul>
             </div>
@@ -1590,7 +1606,7 @@
         $('.partner').owlCarousel({
             loop: true,
             margin: 10,
-            nav: true,
+            nav: false,
             dots: false,
             autoplay: true,
             autoplayTimeout: 3400,
