--- a/lienhe.html
+++ b/lienhe.html
@@ -544,10 +544,7 @@
                 <g>
                     <path d="m407.579 87.677c-31.073-53.624-86.265-86.385-147.64-87.637-2.62-.054-5.257-.054-7.878 0-61.374 1.252-116.566 34.013-147.64 87.637-31.762 54.812-32.631 120.652-2.325 176.123l126.963 232.387c.057.103.114.206.173.308 5.586 9.709 15.593 15.505 26.77 15.505 11.176 0 21.183-5.797 26.768-15.505.059-.102.116-.205.173-.308l126.963-232.387c30.304-55.471 29.435-121.311-2.327-176.123zm-151.579 144.323c-39.701 0-72-32.299-72-72s32.299-72 72-72 72 32.299 72 72-32.298 72-72 72z"></path>
                 </g>
-            </svg> <strong>Địa chỉ: </strong>Tầng 18A, tòa nhà MHDI, số 68 Nguyễn Cơ Thạch, Nam Từ Liêm, Hà Nội</div>
-                <div class="phone-footer1"><svg width="20" height="20" fill="#00aeef" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                <path d="m30.035 22.6c-.082-.065-6.035-4.356-7.669-4.048-.78.138-1.226.67-2.121 1.735-.144.172-.49.584-.759.877a12.517 12.517 0 0 1 -1.651-.672 13.7 13.7 0 0 1 -6.321-6.321 12.458 12.458 0 0 1 -.672-1.651c.294-.27.706-.616.882-.764 1.06-.89 1.593-1.336 1.731-2.118.283-1.62-4.005-7.614-4.05-7.668a2.289 2.289 0 0 0 -1.705-.97c-1.738 0-6.7 6.437-6.7 7.521 0 .063.091 6.467 7.988 14.5 8.025 7.888 14.428 7.979 14.491 7.979 1.085 0 7.521-4.962 7.521-6.7a2.283 2.283 0 0 0 -.965-1.7z"></path>
-            </svg> <strong>Điện thoại: </strong> 0911 392 019</div>
+            </svg> Điện thoại: </strong> 0911 392 019</div>
                 <div class="email-footer1"><svg width="20" height="20" enable-background="new 0 0 512 512" fill="#00aeef" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                 <g>
                     <path d="m471.647 176.983v-78.568l-98.811-98.415h-199.071v177.009l-40.353.004v-60.2h-133.059l-.353 395.187h512v-335.021zm-90-125.835 38.675 38.52h-38.675zm-177.882-21.104h147.882v89.668h90v57.273l-237.882.021zm-173.412 116.813h73.059v335.099h-73.059zm451.647 335.099h-348.588v-274.899l348.588-.032z"></path>
